try to fix mobile layout issues v3

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,10 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
+
+  .h-screen-mobile {
+    height: -webkit-fill-available;
+  }
 }
 
 html,
